tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier2MV-AAAAAAAAAAAAAAAAAAAABA==__MoltenPolyethyle-AAAAAAAAAAAAAAAAAAAC9w==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 759,
  "prerequisites": [
    846,
    847
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Polyethylene is made out of ethylene and oxygen in a chemical reactor. Molten Polyethylene cells hold 144L, perfect for 1 ingot or plate.\nIf you want precise amounts, you can use a Volumetric Flask once you electrolyze some Boron from Borax.\n\nYou §omay§r have started getting damaged from holding the cells. If you have, put your glove baubles back on. All Molten cells cause damage and store 144L. Mostly, Molten cells come from metal-type materials, or stuff that was melted. Excuse me, §oFluid Extracted§r, whatever that's supposed to mean.\n\nNotice some leftovers? Try using the plunger, or if you have the materials, you can use 12 ethylene cells and 84 oxygen cells to make exactly 125 cells of polyethylene.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lMolten Polyethylene",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    846,
    847
  ],
  "rewards": [],
  "tasks": []
}
