tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier2MV-AAAAAAAAAAAAAAAAAAAABA==__MonocrystallineS-AAAAAAAAAAAAAAAAAAADDg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 782,
  "prerequisites": [
    836,
    1788
  ],
  "properties": {
    "auto_claim": false,
    "desc": "To make wafers, you need to make monocrystalline silicon boules first. The process takes 450 seconds and requires solar grade silicon dust and a small gallium arsenide crystal in the electric blast furnace. You can make 16 wafers out of every boule.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lMonocrystalline Silicon Boules",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    836,
    1788
  ],
  "rewards": [],
  "tasks": []
}
