tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier2MV-AAAAAAAAAAAAAAAAAAAABA==__OlikeOxygen-AAAAAAAAAAAAAAAAAAADTg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 846,
  "prerequisites": [
    126
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Oxygen can be made in lots of different ways. Most commonly you'll either electrolyze it out of cassiterite sand, sugar from sugar canes or sugar beets, water, or various other oxygen-rich dusts, or centrifuge it from brown or yellow limonite dust.\n\nLater on, water electrolyzing or air centrifuging is probably going to be your main source.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lO like Oxygen",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    126
  ],
  "rewards": [],
  "tasks": []
}
